--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ src/CommonAssemblyInfo.cs
 _ReSharper.*
 *.[Rr]e[Ss]harper.user
 src/FubuMVC.*.ReSharper
+*.DotSettings
 *.DotSettings.user
 *.suo
 *.cache
