--- a/ripple.config
+++ b/ripple.config
@@ -1,28 +1,20 @@
 <?xml version="1.0"?>
-<ripple xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+<ripple xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <Name>diagnostics</Name>
   <NugetSpecFolder>packaging/nuget</NugetSpecFolder>
   <SourceFolder>src</SourceFolder>
   <BuildCommand>rake</BuildCommand>
   <FastBuildCommand>rake compile</FastBuildCommand>
-  <Floats>
-    <string>FubuMVC.References</string>
-    <string>Bottles</string>
-    <string>FubuCore</string>
-    <string>FubuLocalization</string>
-    <string>FubuMVC.JQueryUI</string>
-    <string>FubuMVC.SlickGrid</string>
-    <string>FubuMVC.Spark</string>
-    <string>FubuMVC.TwitterBootstrap</string>
-    <string>FubuTestingSupport</string>
-    <string>FubuMVC</string>
-    <string>FubuMVC.Core</string>
-    <string>FubuMVC.Core.UI</string>
-    <string>FubuMVC.Core.Assets</string>
-    <string>FubuMVC.Core.View</string>
-    <string>FubuMVC.Media</string>
-    <string>FubuMVC.StructureMap</string>
-    <string>FubuMVC.Navigation</string>
-    <string>HtmlTags</string>
-  </Floats>
+  <Feeds>
+    <Feed Url="http://build.fubu-project.org/guestAuth/app/nuget/v1/FeedService.svc" Mode="Float" />
+    <Feed Url="http://nuget.org/api/v2" Mode="Fixed" />
+    <Feed Url="http://packages.nuget.org/v1/FeedService.svc" Mode="Fixed" />
+  </Feeds>
+  <Nugets>
+    <Dependency Name="NUnit" Version="2.5.10.11092" Mode="Fixed" Stability="Anything" />
+    <Dependency Name="RhinoMocks" Version="3.6.1" Mode="Fixed" Stability="Anything" />
+    <Dependency Name="Spark" Version="1.7.5.0" Mode="Fixed" Stability="Anything" />
+    <Dependency Name="structuremap" Version="2.6.3" Mode="Fixed" Stability="Anything" />
+    <Dependency Name="structuremap.automocking" Version="2.6.3" Mode="Fixed" Stability="Anything" />
+  </Nugets>
 </ripple>
