--- a/src/FubuMVC.Diagnostics/FubuMVC.Diagnostics.csproj
+++ b/src/FubuMVC.Diagnostics/FubuMVC.Diagnostics.csproj
@@ -152,7 +152,7 @@
     <None Include="Routes\Routes.spark">
       <SubType>Designer</SubType>
     </None>
-    <Content Include="packages.config">
+    <Content Include="ripple.dependencies.config">
       <SubType>Designer</SubType>
     </Content>
     <None Include="Services\ServiceEndpoints.spark">
